--- a/app/assets/styles/modules/_large-hero.css
+++ b/app/assets/styles/modules/_large-hero.css
@@ -1,4 +1,5 @@
 .large-hero {
+    border-bottom: 10px solid $mainBlue; 
     position: relative;
 
     &__text-content{
@@ -10,17 +11,27 @@
         text-align: center;
     }
 
-    &__title{
+        &__title{
         font-weight: 300;
         color: $mainBlue;
-        font-size: 4.8rem;
         margin: 0;
+        
+        font-size: 2.4rem;
+        @mixin atSmall {
+            font-size: 4.8rem;
+        }
+        
+
     }
     &__subtitle{
         font-weight: 300;
         color: $mainBlue;
-        font-size: 2.9rem;
         margin: 0;
+
+        font-size: 1.1rem;
+        @mixin atSmall {
+            font-size: 2.9rem;
+        }
     }
 
     &__description{
@@ -31,6 +42,10 @@
         max-width: 30rem;
         margin-left:auto;
         margin-right:auto;
+    }
+
+    &__image {
+        display: block;
     }
 
 }
