--- a/app/assets/styles/modules/_headline.css
+++ b/app/assets/styles/modules/_headline.css
@@ -1,27 +1,50 @@
-.headline{
-   font-weight: 300;
-   font-size: 2.875rem;
-   color: $mainBlue;
+.headline {
+  font-size: 1.9rem;
+  font-weight: 300;
+  color: $mainBlue;
 
-   &--centered {
-       text-align: center;
-   }
+  @mixin atSmall {
+    font-size: 2.875rem;
+  }
 
-   &--orange {
-       color: $mainOrange;
-   }
+  &--centered {
+    text-align: center;
+  }
 
-   &--small {
-       font-size: 1.875rem;
-   }
+  &--orange {
+    color: $mainOrange;
+  }
 
-   &--narrow{
-       max-width: 500px;
-       margin-left: auto;
-       margin-right: auto;
-   }
+  &--small {
+    font-size: 1.2rem;
+    @mixin atSmall {
+      font-size: 1.875rem;
+    }
+  }
 
-   strong {
-       font-weight: 400 ;
-   }
+  &--narrow {
+    max-width: 500px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  &--light {
+    font-weight: 100;
+  }
+
+  strong {
+    font-weight: 400;
+  }
+
+  &--b-margin-small {
+    margin-bottom: .5em;
+  }
+
+  &--b-margin-large {
+    margin-bottom: 1.6em;
+  }
+
+  &--no-t-margin {
+    margin-top: 0;
+  }
 }
