--- a/app/assets/styles/modules/_sprite.css
+++ b/app/assets/styles/modules/_sprite.css
@@ -2,7 +2,7 @@
 Instead edit gulp/templates/sprite */
 
     .icon {
-      background-image: url('/assets/images/sprites/sprite-0f9283b3.svg');
+      background-image: url('/assets/images/sprites/sprite-8ee615dd.svg');
     }
 
   .icon--clear-view-escapes {
@@ -20,49 +20,49 @@ Instead edit gulp/templates/sprite */
   .icon--facebook {
     width: 21.23px;
     height: 42.01px;
-    background-position: 26.040607071652357% 45.795830448496034%;
+    background-position: 26.040607071652357% 34.61247746962032%;
   }
 
   .icon--fire {
     width: 56px;
     height: 64px;
-    background-position: 0 99.56481481481481%;
+    background-position: 0 71.68666666666667%;
   }
 
   .icon--globe {
     width: 64px;
     height: 64px;
-    background-position: 27.586206896551722% 99.56481481481481%;
+    background-position: 27.586206896551722% 71.68666666666667%;
   }
 
   .icon--instagram {
     width: 42.01px;
     height: 42.01px;
-    background-position: 63.2917018534157% 49.234556504346486%;
+    background-position: 63.2917018534157% 37.21146578289435%;
   }
 
   .icon--mail {
     width: 64px;
     height: 48px;
-    background-position: 0 48.00806451612903%;
+    background-position: 0 35.86144578313253%;
   }
 
   .icon--rain {
     width: 64px;
     height: 64px;
-    background-position: 99.70443349753694% 59.25925925925926%;
+    background-position: 99.70443349753694% 42.666666666666664%;
   }
 
   .icon--star {
     width: 64px;
     height: 64px;
-    background-position: 59.11330049261084% 99.56481481481481%;
+    background-position: 59.11330049261084% 71.68666666666667%;
   }
 
   .icon--twitter {
     width: 51.78px;
     height: 42.06px;
-    background-position: 94.04330452560171% 98.50700323226104%;
+    background-position: 94.04330452560171% 74.44457368849599%;
   }
 
   .icon--wifi {
@@ -74,5 +74,11 @@ Instead edit gulp/templates/sprite */
   .icon--youtube {
     width: 34.75px;
     height: 42px;
-    background-position: 36.69752421959096% 45.792307692307695%;
+    background-position: 36.69752421959096% 34.61046511627907%;
+  }
+
+  .icon--youtube_2 {
+    width: 34.75px;
+    height: 42px;
+    background-position: 0 99.72674418604652%;
   }
